<resources>
    <string name="app_name">PiPE</string>
    <string name="bottom_navi_item_money">지원금</string>
    <string name="bottom_navi_item_job">취업</string>
    <string name="bottom_navi_item_board">게시판</string>
    <string name="bottom_navi_item_place">공간</string>
    <string name="bottom_navi_item_insurance">보험</string>
    <string name="bottom_sheet_link_title">클릭하여 해당 사이트로 이동</string>
    <string name="viewstub_detail_title">상세검색</string>
    <string name="fragment_board_item_calendar">메모</string>
    <string name="fragment_board_item_notification">공지사항</string>
    <string name="fragment_board_item_portfolio">이력서</string>
    <string name="fragment_board_item_setting">개인설정</string>
    <string name="fragment_board_calendar_schedule_title">📝 일정목록</string>
    <string name="fragment_board_calendar_memo_hint">✍️ 중요한 일은 여기에 메모해주세요</string>
    <string name="fragment_board_chatbot_hint">어떤 것이 궁금한가요?</string>
    <string name="fragment_board_chatbot_guide">빈 칸에 궁금한 것을 입력하고, 오른쪽 돋보기 모양을 눌러주세요</string>
    <string name="fragment_board_setting_language_title">언어</string>
    <string name="fragment_board_setting_language_emoji">🗣️</string>
    <string name="fragment_board_setting_information_title">정보 받을 국가</string>
    <string name="fragment_board_setting_information_emoji">🌐</string>
    <string name="fragment_money_item_support">지원금</string>
    <string name="fragment_money_item_bank">금융</string>
    <string name="fragment_place_item_ticket">청약, 분양권</string>
    <string name="fragment_place_item_myhome">주거</string>
    <string name="fragment_place_item_office">사무실</string>
    <string name="fragment_job_item_employment">일자리</string>
    <string name="fragment_job_item_bootcamp">취업연계</string>
    <string name="fragment_job_item_event">행사</string>
    <string name="fragment_job_item_certification">자격증</string>
    <string name="fragment_job_item_lecture">강의</string>
    <string name="emoji_family_type">👨‍👩‍👧‍👦</string>
    <string name="jobfair_period">행사기간</string>
    <string name="jobfair_time">행사시간</string>
    <string name="jobfair_address">행사장소</string>
    <string name="jobfair_companylistandjobinfo">참여기업\\n구인정보</string>
    <string name="jobfair_contact">문의처</string>
    <string name="jobfair_addinfo">부대사항</string>
    <string name="certification_search">🔍 자격증 검색</string>
    <string name="certification_type_t">국가기술자격</string>
    <string name="certification_type_s">국가전문자격</string>
    <string name="certification_type_w">일학습병행자격</string>
    <string name="certification_type_c">과정평가형자격</string>
    <string name="certification_type_other">기타</string>
    <string name="contest_subject">주제</string>
    <string name="contest_target">모집대상</string>
    <string name="contest_size">규모</string>
    <string name="contest_maincontent">주요내용</string>
    <string name="contest_reward">시상(지원)</string>
    <string name="contest_applyperiod">접수기간</string>
    <string name="contest_servicecall">문의</string>
    <string name="contest_companyTitle">기관(회사)</string>
    <string name="contest_applyrequirement">지원자격</string>
    <string name="contest_howtoapply">지원방법</string>
    <string name="contest_address">지역</string>
    <string name="contest_url">홈페이지</string>
    <string name="contest_except">제외대상</string>
    <string name="contest_applystartdate">접수시작</string>
    <string name="contest_applyenddate">접수마감</string>
    <string name="search_keyword">🔍 키워드를 입력하세요</string>
    <string name="certification_doc_title">필기</string>
    <string name="certification_prac_title">실기(면접)</string>
    <string name="certification_reg_title">원서접수</string>
    <string name="certification_exam_title">시험날짜</string>
    <string name="certification_passdate">합격발표</string>
    <string name="employment_career">경력</string>
    <string name="employment_education">학력</string>
    <string name="employment_skill">스킬</string>
    <string name="employment_jobreponsibility">모집 직무</string>
    <string name="employment_money">급여</string>
    <string name="employment_applyperiod">접수 기간</string>
    <string name="employment_address">근무지</string>
    <string name="finance_tab_item_bank">저금</string>
    <string name="finance_tab_item_insurance">보험</string>
    <string name="fixed_deposit_title">정기예금</string>
    <string name="savings_deposit_title">적금</string>
    <string name="pension_savings_title">연금저축</string>
    <string name="finance_tab_item_loan">대출</string>
    <string name="title_mortgage">주택담보대출</string>
    <string name="title_renthouse">전세자금대출</string>
</resources>