<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
<!--            <com.cavss.pipe.ui.custom.jy_calendar.JuYeonCalendar-->
<!--                android:id="@+id/myCalender"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="16dp"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintLeft_toLeftOf="parent"-->
<!--                app:layout_constraintRight_toRightOf="parent"/>-->
            <com.cavss.pipe.ui.custom.claymorphism.ClaymorphismView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/memoContainer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <EditText
                    android:id="@+id/my_memo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@null"
                    android:gravity="top|start"
                    android:hint="@string/fragment_board_calendar_memo_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:minLines="10"
                    android:scrollbars="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </com.cavss.pipe.ui.custom.claymorphism.ClaymorphismView>

            <com.cavss.pipe.ui.custom.claymorphism.ClaymorphismView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_container"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/memoContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/search"
                    android:hint="@string/fragment_board_chatbot_hint"
                    android:textColor="@color/textColour"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:maxLines="3"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:gravity="top|start"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/searchButton"
                    android:padding="5dp"
                    android:textSize="25sp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </com.cavss.pipe.ui.custom.claymorphism.ClaymorphismView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answer"
                android:text="@string/fragment_board_chatbot_guide"
                android:textColor="@color/textColour"
                android:textSize="25sp"
                android:textStyle="normal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/search_container"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>

